deployment/service.yaml
apiVersion: v1
# tag::tls[]
kind: Service
metadata:
  name: vshn-oauth-proxy-demo
  labels:
    app: vshn-oauth-proxy-demo
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: vshn-oauth-proxy-demo-tls
# end::tls[]
spec:
  ports:
    - name: web
      port: 9094
      protocol: TCP
      targetPort: web
  selector:
    app: vshn-oauth-proxy-demo
  type: ClusterIP
