deployment/route.yaml
apiVersion: route.openshift.io/v1
metadata:
  name: vshn-oauth-proxy-demo
  labels:
    app: vshn-oauth-proxy-demo
  annotations:
    kubernetes.io/tls-acme: "true"
# tag::reencrypt[]
kind: Route
spec:
  port:
    targetPort: web   # <1>
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt # <2>
  to:
    kind: Service
    name: vshn-oauth-proxy-demo  # <3>
# end::reencrypt[]
